--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+/* styles.css */
+/* styles.css */
+@import '~font-awesome/css/font-awesome.min.css';
+
+
 
 * {
   box-sizing: border-box;
@@ -26,6 +31,19 @@ time, mark, audio, video {
   font-size: 100%;
   font-family: Arial, Helvetica, sans-serif;
   vertical-align: baseline;
+}
+
+/* CSS */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 html, body {
@@ -59,3 +77,20 @@ q:before, q:after {
 table {
   border-spacing: 0;
 }
+
+.base-card {
+  background-color: #fff;
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+a,
+a:hover {
+  text-decoration: none;
+  color: unset;
+}
+
+button{
+  cursor: pointer
+}
+  
